--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
-    "connect-mongo": "^4.6.0",
+    "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^3.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-flash": "^0.0.2",
